Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9143

Stack corruption detected in DropTargetWrapper_DragOver when dragging items on the desktop

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Shell
    • None

    Description

      The stack pointer is off when returning from IDropTarget_DragOver.

      The target's DragOver is CDefView::DragOver, which calls CDefView::drag_notify_subitem.

      In that function, the stack-saved value for esi gets overwritten at:

          lResult = m_ListView.HitTest(&htinfo);

      Attachments

        Activity

          People

            ThFabba ThFabba
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: