[INCLUDE] - Fix CListView::HitTest. Fixes stack corruption when dragging files on the desktop. CORE-9143 #resolve

svn path=/trunk/; revision=66211